--- a/templates/create_booking.html.twig
+++ b/templates/create_booking.html.twig
@@ -1,3 +1,43 @@
-<html>
-<h1>Create booking Page</h1>
-</html>
+<form action="POST">
+    <div class="form-group">
+        <h2 class="heading">Create booking</h2>
+        <div class="controls">
+            <label for="name">Name</label>
+            <input type="text" id="name" class="floatLabel" name="name">
+        </div>
+        <div class="controls">
+            <label for="email">Email</label>
+            <input type="text" id="email" class="floatLabel" name="email">
+        </div>
+        <div class="controls">
+            <label for="phone">Phone</label>
+            <input type="tel" id="phone" class="floatLabel" name="phone">
+        </div>
+    </div>
+    <div class="form-group">
+        <h2 class="heading">Details</h2>
+        <div class="grid">
+            <div class="col-1-4 col-1-4-sm">
+                <div class="controls">
+                    <label for="arrive" class="label-date"><i class="fa fa-calendar"></i>&nbsp;&nbsp;Arrive</label>
+                    <input type="date" id="arrive" class="floatLabel" name="arrive" value="<?php echo date('Y-m-d'); ?>">
+                </div>
+            </div>
+            <div class="col-1-4 col-1-4-sm">
+                <div class="controls">
+                    <label for="depart" class="label-date"><i class="fa fa-calendar"></i>&nbsp;&nbsp;Depart</label>
+                    <input type="date" id="depart" class="floatLabel" name="depart" value="<?php echo date('Y-m-d'); ?>" />
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="grid">
+            <h5 class="info-text">Additional comments</h5>
+            <div class="controls">
+                <textarea name="comments" class="floatLabel" id="comments"></textarea>
+                <label for="comments">Comments</label>
+            </div>
+            <button type="submit" value="Submit" class="col-1-4">Submit</button>
+        </div>
+    </div>
+</form>
